@@ -6004,6 +6004,25 @@ endlocal</pre>
             </thead>
             <tbody>
             <tr>
+               <td>multiple</td>
+               <td>No</td>
+               <td>Build index used to run different builders.  For example,
+               if this is set to 3, the builder will be run every 3 builds.
+               Default value is 1. Can't be set if time is set.</td>
+            </tr>
+            <tr>
+               <td>time</td>
+               <td>No</td>
+               <td>Time in the form HHmm. Can't be set if multiple is set.</td>
+            </tr>
+            <tr>
+               <td>day</td>
+               <td>No</td>
+                <td>Valid values are (case-insensitive) the English names for
+                the days of the week (Sunday, Monday, Tuesday, etc). Does not
+                support multiple days except for the default of every day.</td>
+            </tr>
+            <tr>
                 <td>showProgress</td>
                 <td>No  (defaults to true)</td>
                 <td>If true or omitted, the composite builder will provide progress messages, as will any child builders that support this
